src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CLASS
    CONTINUE
    IMPORT
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment
Rule 5     statement -> function_declaration
Rule 6     statement -> return_statement
Rule 7     statement -> function_call
Rule 8     statement -> if_statement
Rule 9     statement -> for_in_statement
Rule 10    array_declaration -> LBRACKET array_elements RBRACKET
Rule 11    array_elements -> expression
Rule 12    array_elements -> expression COMMA array_elements
Rule 13    if_statement -> IF expression LBRACE statement_list RBRACE
Rule 14    if_statement -> IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 15    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 16    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 17    for_in_statement -> FOR id_list IN ID LBRACE statement_list RBRACE
Rule 18    id_list -> ID
Rule 19    id_list -> ID COMMA id_list
Rule 20    assignment_type -> ASSIGN
Rule 21    assignment_type -> PLUSEQUAL
Rule 22    assignment_type -> MINUSEQUAL
Rule 23    assignment -> ID assignment_type expression
Rule 24    assignment -> ID ADD
Rule 25    assignment -> ID SUB
Rule 26    assignment -> type_attr ID ASSIGN expression
Rule 27    assignment -> CONST ID ASSIGN expression
Rule 28    assignment -> CONST type_attr ID ASSIGN expression
Rule 29    expression -> expression PLUS expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression MULT expression
Rule 32    expression -> expression DIV expression
Rule 33    expression -> expression EXP expression
Rule 34    expression -> expression EQUALS expression
Rule 35    expression -> expression GREATER expression
Rule 36    expression -> expression LESS expression
Rule 37    expression -> expression GEQUAL expression
Rule 38    expression -> expression LEQUAL expression
Rule 39    expression -> expression NEQUAL expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expression -> NUMBER
Rule 42    expression -> STRING
Rule 43    expression -> FLOAT
Rule 44    expression -> BOOL
Rule 45    expression -> NULL
Rule 46    expression -> id
Rule 47    expression -> function_call
Rule 48    expression -> array_declaration
Rule 49    expression -> MINUS expression
Rule 50    return_statement -> RETURN expression
Rule 51    type_attr -> INTattr
Rule 52    type_attr -> FLOATattr
Rule 53    type_attr -> STRINGattr
Rule 54    type_attr -> BOOLattr
Rule 55    type_attr -> NULL
Rule 56    function_declaration -> DEF ID LPAREN RPAREN LBRACE statement_list RBRACE
Rule 57    function_declaration -> DEF ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
Rule 58    function_declaration -> DEF type_attr ID LPAREN RPAREN LBRACE statement_list RBRACE
Rule 59    function_declaration -> DEF type_attr ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
Rule 60    function_call -> ID LPAREN RPAREN
Rule 61    function_call -> ID LPAREN parameters RPAREN
Rule 62    id -> ID
Rule 63    parameters -> expression
Rule 64    parameters -> expression COMMA parameters
Rule 65    func_parameters -> ID
Rule 66    func_parameters -> ID COMMA func_parameters
Rule 67    func_parameters -> type_attr ID
Rule 68    func_parameters -> type_attr ID COMMA func_parameters

Terminals, with rules where they appear

ADD                  : 24
ASSIGN               : 20 26 27 28
BOOL                 : 44
BOOLattr             : 54
BREAK                : 
CLASS                : 
COMMA                : 12 19 64 66 68
CONST                : 27 28
CONTINUE             : 
DEF                  : 56 57 58 59
DIV                  : 32
ELSE                 : 14 16
EQUALS               : 34
EXP                  : 33
FLOAT                : 43
FLOATattr            : 52
FOR                  : 17
GEQUAL               : 37
GREATER              : 35
ID                   : 17 18 19 23 24 25 26 27 28 56 57 58 59 60 61 62 65 66 67 68
IF                   : 13 14 15 16
IMPORT               : 
IN                   : 17
INTattr              : 51
LBRACE               : 13 14 14 15 16 16 17 56 57 58 59
LBRACKET             : 10
LEQUAL               : 38
LESS                 : 36
LPAREN               : 15 16 40 56 57 58 59 60 61
MINUS                : 30 49
MINUSEQUAL           : 22
MULT                 : 31
NEQUAL               : 39
NULL                 : 45 55
NUMBER               : 41
PLUS                 : 29
PLUSEQUAL            : 21
RBRACE               : 13 14 14 15 16 16 17 56 57 58 59
RBRACKET             : 10
RETURN               : 50
RPAREN               : 15 16 40 56 57 58 59 60 61
STRING               : 42
STRINGattr           : 53
SUB                  : 25
WHILE                : 
error                : 

Nonterminals, with rules where they appear

array_declaration    : 48
array_elements       : 10 12
assignment           : 4
assignment_type      : 23
expression           : 11 12 13 14 15 16 23 26 27 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 49 50 63 64
for_in_statement     : 9
func_parameters      : 57 59 66 68
function_call        : 7 47
function_declaration : 5
id                   : 46
id_list              : 17 19
if_statement         : 8
parameters           : 61 64
program              : 0
return_statement     : 6
statement            : 2 3
statement_list       : 1 3 13 14 14 15 16 16 17 56 57 58 59
type_attr            : 26 28 58 59 67 68

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment
    (5) statement -> . function_declaration
    (6) statement -> . return_statement
    (7) statement -> . function_call
    (8) statement -> . if_statement
    (9) statement -> . for_in_statement
    (23) assignment -> . ID assignment_type expression
    (24) assignment -> . ID ADD
    (25) assignment -> . ID SUB
    (26) assignment -> . type_attr ID ASSIGN expression
    (27) assignment -> . CONST ID ASSIGN expression
    (28) assignment -> . CONST type_attr ID ASSIGN expression
    (56) function_declaration -> . DEF ID LPAREN RPAREN LBRACE statement_list RBRACE
    (57) function_declaration -> . DEF ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
    (58) function_declaration -> . DEF type_attr ID LPAREN RPAREN LBRACE statement_list RBRACE
    (59) function_declaration -> . DEF type_attr ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
    (50) return_statement -> . RETURN expression
    (60) function_call -> . ID LPAREN RPAREN
    (61) function_call -> . ID LPAREN parameters RPAREN
    (13) if_statement -> . IF expression LBRACE statement_list RBRACE
    (14) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (16) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (17) for_in_statement -> . FOR id_list IN ID LBRACE statement_list RBRACE
    (51) type_attr -> . INTattr
    (52) type_attr -> . FLOATattr
    (53) type_attr -> . STRINGattr
    (54) type_attr -> . BOOLattr
    (55) type_attr -> . NULL

    ID              shift and go to state 10
    CONST           shift and go to state 12
    DEF             shift and go to state 13
    RETURN          shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    INTattr         shift and go to state 17
    FLOATattr       shift and go to state 18
    STRINGattr      shift and go to state 19
    BOOLattr        shift and go to state 20
    NULL            shift and go to state 21

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    function_declaration           shift and go to state 5
    return_statement               shift and go to state 6
    function_call                  shift and go to state 7
    if_statement                   shift and go to state 8
    for_in_statement               shift and go to state 9
    type_attr                      shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . function_declaration
    (6) statement -> . return_statement
    (7) statement -> . function_call
    (8) statement -> . if_statement
    (9) statement -> . for_in_statement
    (23) assignment -> . ID assignment_type expression
    (24) assignment -> . ID ADD
    (25) assignment -> . ID SUB
    (26) assignment -> . type_attr ID ASSIGN expression
    (27) assignment -> . CONST ID ASSIGN expression
    (28) assignment -> . CONST type_attr ID ASSIGN expression
    (56) function_declaration -> . DEF ID LPAREN RPAREN LBRACE statement_list RBRACE
    (57) function_declaration -> . DEF ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
    (58) function_declaration -> . DEF type_attr ID LPAREN RPAREN LBRACE statement_list RBRACE
    (59) function_declaration -> . DEF type_attr ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
    (50) return_statement -> . RETURN expression
    (60) function_call -> . ID LPAREN RPAREN
    (61) function_call -> . ID LPAREN parameters RPAREN
    (13) if_statement -> . IF expression LBRACE statement_list RBRACE
    (14) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (16) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (17) for_in_statement -> . FOR id_list IN ID LBRACE statement_list RBRACE
    (51) type_attr -> . INTattr
    (52) type_attr -> . FLOATattr
    (53) type_attr -> . STRINGattr
    (54) type_attr -> . BOOLattr
    (55) type_attr -> . NULL

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 10
    CONST           shift and go to state 12
    DEF             shift and go to state 13
    RETURN          shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    INTattr         shift and go to state 17
    FLOATattr       shift and go to state 18
    STRINGattr      shift and go to state 19
    BOOLattr        shift and go to state 20
    NULL            shift and go to state 21

    statement                      shift and go to state 22
    assignment                     shift and go to state 4
    function_declaration           shift and go to state 5
    return_statement               shift and go to state 6
    function_call                  shift and go to state 7
    if_statement                   shift and go to state 8
    for_in_statement               shift and go to state 9
    type_attr                      shift and go to state 11

state 3

    (2) statement_list -> statement .

    ID              reduce using rule 2 (statement_list -> statement .)
    CONST           reduce using rule 2 (statement_list -> statement .)
    DEF             reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    INTattr         reduce using rule 2 (statement_list -> statement .)
    FLOATattr       reduce using rule 2 (statement_list -> statement .)
    STRINGattr      reduce using rule 2 (statement_list -> statement .)
    BOOLattr        reduce using rule 2 (statement_list -> statement .)
    NULL            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    ID              reduce using rule 4 (statement -> assignment .)
    CONST           reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    INTattr         reduce using rule 4 (statement -> assignment .)
    FLOATattr       reduce using rule 4 (statement -> assignment .)
    STRINGattr      reduce using rule 4 (statement -> assignment .)
    BOOLattr        reduce using rule 4 (statement -> assignment .)
    NULL            reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> function_declaration .

    ID              reduce using rule 5 (statement -> function_declaration .)
    CONST           reduce using rule 5 (statement -> function_declaration .)
    DEF             reduce using rule 5 (statement -> function_declaration .)
    RETURN          reduce using rule 5 (statement -> function_declaration .)
    IF              reduce using rule 5 (statement -> function_declaration .)
    FOR             reduce using rule 5 (statement -> function_declaration .)
    INTattr         reduce using rule 5 (statement -> function_declaration .)
    FLOATattr       reduce using rule 5 (statement -> function_declaration .)
    STRINGattr      reduce using rule 5 (statement -> function_declaration .)
    BOOLattr        reduce using rule 5 (statement -> function_declaration .)
    NULL            reduce using rule 5 (statement -> function_declaration .)
    $end            reduce using rule 5 (statement -> function_declaration .)
    RBRACE          reduce using rule 5 (statement -> function_declaration .)


state 6

    (6) statement -> return_statement .

    ID              reduce using rule 6 (statement -> return_statement .)
    CONST           reduce using rule 6 (statement -> return_statement .)
    DEF             reduce using rule 6 (statement -> return_statement .)
    RETURN          reduce using rule 6 (statement -> return_statement .)
    IF              reduce using rule 6 (statement -> return_statement .)
    FOR             reduce using rule 6 (statement -> return_statement .)
    INTattr         reduce using rule 6 (statement -> return_statement .)
    FLOATattr       reduce using rule 6 (statement -> return_statement .)
    STRINGattr      reduce using rule 6 (statement -> return_statement .)
    BOOLattr        reduce using rule 6 (statement -> return_statement .)
    NULL            reduce using rule 6 (statement -> return_statement .)
    $end            reduce using rule 6 (statement -> return_statement .)
    RBRACE          reduce using rule 6 (statement -> return_statement .)


state 7

    (7) statement -> function_call .

    ID              reduce using rule 7 (statement -> function_call .)
    CONST           reduce using rule 7 (statement -> function_call .)
    DEF             reduce using rule 7 (statement -> function_call .)
    RETURN          reduce using rule 7 (statement -> function_call .)
    IF              reduce using rule 7 (statement -> function_call .)
    FOR             reduce using rule 7 (statement -> function_call .)
    INTattr         reduce using rule 7 (statement -> function_call .)
    FLOATattr       reduce using rule 7 (statement -> function_call .)
    STRINGattr      reduce using rule 7 (statement -> function_call .)
    BOOLattr        reduce using rule 7 (statement -> function_call .)
    NULL            reduce using rule 7 (statement -> function_call .)
    $end            reduce using rule 7 (statement -> function_call .)
    RBRACE          reduce using rule 7 (statement -> function_call .)


state 8

    (8) statement -> if_statement .

    ID              reduce using rule 8 (statement -> if_statement .)
    CONST           reduce using rule 8 (statement -> if_statement .)
    DEF             reduce using rule 8 (statement -> if_statement .)
    RETURN          reduce using rule 8 (statement -> if_statement .)
    IF              reduce using rule 8 (statement -> if_statement .)
    FOR             reduce using rule 8 (statement -> if_statement .)
    INTattr         reduce using rule 8 (statement -> if_statement .)
    FLOATattr       reduce using rule 8 (statement -> if_statement .)
    STRINGattr      reduce using rule 8 (statement -> if_statement .)
    BOOLattr        reduce using rule 8 (statement -> if_statement .)
    NULL            reduce using rule 8 (statement -> if_statement .)
    $end            reduce using rule 8 (statement -> if_statement .)
    RBRACE          reduce using rule 8 (statement -> if_statement .)


state 9

    (9) statement -> for_in_statement .

    ID              reduce using rule 9 (statement -> for_in_statement .)
    CONST           reduce using rule 9 (statement -> for_in_statement .)
    DEF             reduce using rule 9 (statement -> for_in_statement .)
    RETURN          reduce using rule 9 (statement -> for_in_statement .)
    IF              reduce using rule 9 (statement -> for_in_statement .)
    FOR             reduce using rule 9 (statement -> for_in_statement .)
    INTattr         reduce using rule 9 (statement -> for_in_statement .)
    FLOATattr       reduce using rule 9 (statement -> for_in_statement .)
    STRINGattr      reduce using rule 9 (statement -> for_in_statement .)
    BOOLattr        reduce using rule 9 (statement -> for_in_statement .)
    NULL            reduce using rule 9 (statement -> for_in_statement .)
    $end            reduce using rule 9 (statement -> for_in_statement .)
    RBRACE          reduce using rule 9 (statement -> for_in_statement .)


state 10

    (23) assignment -> ID . assignment_type expression
    (24) assignment -> ID . ADD
    (25) assignment -> ID . SUB
    (60) function_call -> ID . LPAREN RPAREN
    (61) function_call -> ID . LPAREN parameters RPAREN
    (20) assignment_type -> . ASSIGN
    (21) assignment_type -> . PLUSEQUAL
    (22) assignment_type -> . MINUSEQUAL

    ADD             shift and go to state 24
    SUB             shift and go to state 25
    LPAREN          shift and go to state 26
    ASSIGN          shift and go to state 27
    PLUSEQUAL       shift and go to state 28
    MINUSEQUAL      shift and go to state 29

    assignment_type                shift and go to state 23

state 11

    (26) assignment -> type_attr . ID ASSIGN expression

    ID              shift and go to state 30


state 12

    (27) assignment -> CONST . ID ASSIGN expression
    (28) assignment -> CONST . type_attr ID ASSIGN expression
    (51) type_attr -> . INTattr
    (52) type_attr -> . FLOATattr
    (53) type_attr -> . STRINGattr
    (54) type_attr -> . BOOLattr
    (55) type_attr -> . NULL

    ID              shift and go to state 31
    INTattr         shift and go to state 17
    FLOATattr       shift and go to state 18
    STRINGattr      shift and go to state 19
    BOOLattr        shift and go to state 20
    NULL            shift and go to state 21

    type_attr                      shift and go to state 32

state 13

    (56) function_declaration -> DEF . ID LPAREN RPAREN LBRACE statement_list RBRACE
    (57) function_declaration -> DEF . ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
    (58) function_declaration -> DEF . type_attr ID LPAREN RPAREN LBRACE statement_list RBRACE
    (59) function_declaration -> DEF . type_attr ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE
    (51) type_attr -> . INTattr
    (52) type_attr -> . FLOATattr
    (53) type_attr -> . STRINGattr
    (54) type_attr -> . BOOLattr
    (55) type_attr -> . NULL

    ID              shift and go to state 33
    INTattr         shift and go to state 17
    FLOATattr       shift and go to state 18
    STRINGattr      shift and go to state 19
    BOOLattr        shift and go to state 20
    NULL            shift and go to state 21

    type_attr                      shift and go to state 34

state 14

    (50) return_statement -> RETURN . expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression EXP expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression GREATER expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GEQUAL expression
    (38) expression -> . expression LEQUAL expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . STRING
    (43) expression -> . FLOAT
    (44) expression -> . BOOL
    (45) expression -> . NULL
    (46) expression -> . id
    (47) expression -> . function_call
    (48) expression -> . array_declaration
    (49) expression -> . MINUS expression
    (62) id -> . ID
    (60) function_call -> . ID LPAREN RPAREN
    (61) function_call -> . ID LPAREN parameters RPAREN
    (10) array_declaration -> . LBRACKET array_elements RBRACKET

    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    MINUS           shift and go to state 36
    ID              shift and go to state 46
    LBRACKET        shift and go to state 47

    expression                     shift and go to state 35
    id                             shift and go to state 43
    function_call                  shift and go to state 44
    array_declaration              shift and go to state 45

state 15

    (13) if_statement -> IF . expression LBRACE statement_list RBRACE
    (14) if_statement -> IF . expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (16) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression EXP expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression GREATER expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GEQUAL expression
    (38) expression -> . expression LEQUAL expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . STRING
    (43) expression -> . FLOAT
    (44) expression -> . BOOL
    (45) expression -> . NULL
    (46) expression -> . id
    (47) expression -> . function_call
    (48) expression -> . array_declaration
    (49) expression -> . MINUS expression
    (62) id -> . ID
    (60) function_call -> . ID LPAREN RPAREN
    (61) function_call -> . ID LPAREN parameters RPAREN
    (10) array_declaration -> . LBRACKET array_elements RBRACKET

    LPAREN          shift and go to state 49
    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    MINUS           shift and go to state 36
    ID              shift and go to state 46
    LBRACKET        shift and go to state 47

    expression                     shift and go to state 48
    id                             shift and go to state 43
    function_call                  shift and go to state 44
    array_declaration              shift and go to state 45

state 16

    (17) for_in_statement -> FOR . id_list IN ID LBRACE statement_list RBRACE
    (18) id_list -> . ID
    (19) id_list -> . ID COMMA id_list

    ID              shift and go to state 51

    id_list                        shift and go to state 50

state 17

    (51) type_attr -> INTattr .

    ID              reduce using rule 51 (type_attr -> INTattr .)


state 18

    (52) type_attr -> FLOATattr .

    ID              reduce using rule 52 (type_attr -> FLOATattr .)


state 19

    (53) type_attr -> STRINGattr .

    ID              reduce using rule 53 (type_attr -> STRINGattr .)


state 20

    (54) type_attr -> BOOLattr .

    ID              reduce using rule 54 (type_attr -> BOOLattr .)


state 21

    (55) type_attr -> NULL .

    ID              reduce using rule 55 (type_attr -> NULL .)


state 22

    (3) statement_list -> statement_list statement .

    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    CONST           reduce using rule 3 (statement_list -> statement_list statement .)
    DEF             reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    INTattr         reduce using rule 3 (statement_list -> statement_list statement .)
    FLOATattr       reduce using rule 3 (statement_list -> statement_list statement .)
    STRINGattr      reduce using rule 3 (statement_list -> statement_list statement .)
    BOOLattr        reduce using rule 3 (statement_list -> statement_list statement .)
    NULL            reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 23

    (23) assignment -> ID assignment_type . expression
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression EXP expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression GREATER expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GEQUAL expression
    (38) expression -> . expression LEQUAL expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . STRING
    (43) expression -> . FLOAT
    (44) expression -> . BOOL
    (45) expression -> . NULL
    (46) expression -> . id
    (47) expression -> . function_call
    (48) expression -> . array_declaration
    (49) expression -> . MINUS expression
    (62) id -> . ID
    (60) function_call -> . ID LPAREN RPAREN
    (61) function_call -> . ID LPAREN parameters RPAREN
    (10) array_declaration -> . LBRACKET array_elements RBRACKET

    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    MINUS           shift and go to state 36
    ID              shift and go to state 46
    LBRACKET        shift and go to state 47

    expression                     shift and go to state 52
    id                             shift and go to state 43
    function_call                  shift and go to state 44
    array_declaration              shift and go to state 45

state 24

    (24) assignment -> ID ADD .

    ID              reduce using rule 24 (assignment -> ID ADD .)
    CONST           reduce using rule 24 (assignment -> ID ADD .)
    DEF             reduce using rule 24 (assignment -> ID ADD .)
    RETURN          reduce using rule 24 (assignment -> ID ADD .)
    IF              reduce using rule 24 (assignment -> ID ADD .)
    FOR             reduce using rule 24 (assignment -> ID ADD .)
    INTattr         reduce using rule 24 (assignment -> ID ADD .)
    FLOATattr       reduce using rule 24 (assignment -> ID ADD .)
    STRINGattr      reduce using rule 24 (assignment -> ID ADD .)
    BOOLattr        reduce using rule 24 (assignment -> ID ADD .)
    NULL            reduce using rule 24 (assignment -> ID ADD .)
    $end            reduce using rule 24 (assignment -> ID ADD .)
    RBRACE          reduce using rule 24 (assignment -> ID ADD .)


state 25

    (25) assignment -> ID SUB .

    ID              reduce using rule 25 (assignment -> ID SUB .)
    CONST           reduce using rule 25 (assignment -> ID SUB .)
    DEF             reduce using rule 25 (assignment -> ID SUB .)
    RETURN          reduce using rule 25 (assignment -> ID SUB .)
    IF              reduce using rule 25 (assignment -> ID SUB .)
    FOR             reduce using rule 25 (assignment -> ID SUB .)
    INTattr         reduce using rule 25 (assignment -> ID SUB .)
    FLOATattr       reduce using rule 25 (assignment -> ID SUB .)
    STRINGattr      reduce using rule 25 (assignment -> ID SUB .)
    BOOLattr        reduce using rule 25 (assignment -> ID SUB .)
    NULL            reduce using rule 25 (assignment -> ID SUB .)
    $end            reduce using rule 25 (assignment -> ID SUB .)
    RBRACE          reduce using rule 25 (assignment -> ID SUB .)


state 26

    (60) function_call -> ID LPAREN . RPAREN
    (61) function_call -> ID LPAREN . parameters RPAREN
    (63) parameters -> . expression
    (64) parameters -> . expression COMMA parameters
    (29) expression -> . expression PLUS expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression MULT expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression EXP expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression GREATER expression
    (36) expression -> . expression LESS expression
    (37) expression -> . expression GEQUAL expression
    (38) expression -> . expression LEQUAL expression
    (39) expression -> . expression NEQUAL expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . NUMBER
    (42) expression -> . STRING
    (43) expression -> . FLOAT
    (44) expression -> . BOOL
    (45) expression -> . NULL
    (46) expression -> . id
    (47) expression -> . function_call
    (48) expression -> . array_declaration
    (49) expression -> . MINUS expression
    (62) id -> . ID
    (60) function_call -> . ID LPAREN RPAREN
    (61) function_call -> . ID LPAREN parameters RPAREN
    (10) array_declaration -> . LBRACKET array_elements RBRACKET

    RPAREN          shift and go to state 53
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 38
    STRING          shift and go to state 39
    FLOAT           shift and go to state 40
    BOOL            shift and go to state 41
    NULL            shift and go to state 42
    MINUS           shift and go to state 36
    ID              shift and go to state 46
    LBRACKET        shift and go to state 47

    parameters                     shift and go to state 54
    expression                     shift and go to state 55
    id                             shift and go to state 43
    function_call                  shift and go to state 44
    array_declaration              shift and go to state 45

state 27

    (20) assignment_type -> ASSIGN .

    LPAREN          reduce using rule 20 (assignment_type -> ASSIGN .)
    NUMBER          reduce using rule 20 (assignment_type -> ASSIGN .)
    STRING          reduce using rule 20 (assignment_type -> ASSIGN .)
    FLOAT           reduce using rule 20 (assignment_type -> ASSIGN .)
    BOOL            reduce using rule 20 (assignment_type -> ASSIGN .)
    NULL            reduce using rule 20 (assignment_type -> ASSIGN .)
    MINUS           reduce using rule 20 (assignment_type -> ASSIGN .)
    ID              reduce using rule 20 (assignment_type -> ASSIGN .)
    LBRACKET        reduce using rule 20 (assignment_type -> ASSIGN .)


state 28

    (21) assignment_type -> PLUSEQUAL .

    LPAREN          reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    NUMBER          reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    STRING          reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    FLOAT           reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    BOOL            reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    NULL            reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    MINUS           reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    ID              reduce using rule 21 (assignment_type -> PLUSEQUAL .)
    LBRACKET        reduce using rule 21 (assignment_type -> PLUSEQUAL .)


state 29

    (22) assignment_type -> MINUSEQUAL .

    LPAREN          reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    NUMBER          reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    STRING          reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    FLOAT           reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    BOOL            reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    NULL            reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    MINUS           reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    ID              reduce using rule 22 (assignment_type -> MINUSEQUAL .)
    LBRACKET        reduce using rule 22 (assignment_type -> MINUSEQUAL .)


state 30

    (26) assignment -> type_attr ID . ASSIGN expression

    ASSIGN          shift and go to state 56


state 31

    (27) assignment -> CONST ID . ASSIGN expression

    ASSIGN          shift and go to state 57


state 32

    (28) assignment -> CONST type_attr . ID ASSIGN expression

    ID              shift and go to state 58


state 33

    (56) function_declaration -> DEF ID . LPAREN RPAREN LBRACE statement_list RBRACE
    (57) function_declaration -> DEF ID . LPAREN func_parameters RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 59


state 34

    (58) function_declaration -> DEF type_attr . ID LPAREN RPAREN LBRACE statement_list RBRACE
    (59) function_declaration -> DEF type_attr . ID LPAREN func_parameters RPAREN LBRACE statement_list RBRACE

    ID              shift and go to state 60


state 35

    (50) return_statement -> RETURN expression .
    (29) expression -> expression . PLUS expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . MULT expression
    (32) expression -> expression . DIV expression
    (33) expression -> expression . EXP expression
    (34) expression -> expression . EQUALS expression
    (35) expression -> expression . GREATER expression
    (36) expression -> expression . LESS expression
    (37) expression -> expression . GEQUAL expression
    (38) expression -> expression . LEQUAL expression
    (39) expression -> expression . NEQUAL expression
